Ignore file list

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,10 @@
 /vendor/
 /bin/
 /composer.phar
-.idea/
+/.idea/encodings.xml
+/.idea/frameworkRootSettings.xml
+/.idea/futsal.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/scopes/scope_settings.xml
+/.idea/vcs.xml
