--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,4 +28,7 @@ security:
 
     #    default:
     #        anonymous: ~
-
+    
+    role_hierarchy:
+            ROLE_ADMIN:       ROLE_USER
+            ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
