Sonata Admin Class

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,3 +79,7 @@ sonata_block:
         # Enable the SonataAdminBundle block
         sonata.admin.block.admin_list:
             contexts:   [admin]
+            
+sonata_admin:
+    options:
+        use_select2: false
