--- a/src/Futsal/TournamentBundle/Resources/config/services.yml
+++ b/src/Futsal/TournamentBundle/Resources/config/services.yml
@@ -58,3 +58,14 @@ services:
             - ~
         calls:
             - [ setTranslationDomain, [FutsalTournamentBundle]]
+            
+    sonata.admin.tournamentteam:
+        class: Futsal\TournamentBundle\Admin\TournamentTeamAdmin
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: "Content", label: "TournamentTeam" }
+        arguments:
+            - ~
+            - Futsal\TournamentBundle\Entity\TournamentTeam
+            - ~
+        calls:
+            - [ setTranslationDomain, [FutsalTournamentBundle]]
