--- a/src/Futsal/TournamentBundle/Resources/config/routing.yml
+++ b/src/Futsal/TournamentBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 futsal_tournament_homepage:
-    path:     /hello/{name}
+    path:     /home
     defaults: { _controller: FutsalTournamentBundle:Default:index }
