--- a/src/Futsal/TournamentBundle/Resources/config/services.yml
+++ b/src/Futsal/TournamentBundle/Resources/config/services.yml
@@ -36,7 +36,9 @@ services:
         calls:
             - [ setTranslationDomain, [FutsalTournamentBundle]]
             - [ addChild, [@sonata.admin.gameteam]]
-            
+            - [ setTemplate, [list, FutsalTournamentBundle:Admin:list__Game.html.twig]]
+    
+   
     sonata.admin.gameteam:
         class: Futsal\TournamentBundle\Admin\GameTeamAdmin
         tags:
@@ -44,9 +46,10 @@ services:
         arguments:
             - ~
             - Futsal\TournamentBundle\Entity\GameTeam
-            - ~
+            - 'FutsalTournamentBundle:GameTeamCRUD'
         calls:
             - [ setTranslationDomain, [FutsalTournamentBundle]]
+            - [ setTemplate, [list, FutsalTournamentBundle:Admin:list__GameTeam.html.twig]]
 
     sonata.admin.tournament:
         class: Futsal\TournamentBundle\Admin\TournamentAdmin
