Personnalize some templates list

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,7 +29,10 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
-
+    form:
+        resources:
+            - 'SonataCoreBundle:Form:datepicker.html.twig'
+        
 # Assetic Configuration
 assetic:
     debug:          "%kernel.debug%"
