--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+sonata_user:
+    resource: '@SonataUserBundle/Resources/config/routing/admin_security.xml'
+    prefix: /admin
+
 admin:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
     prefix: /admin
@@ -11,6 +15,6 @@ futsal_tournament:
     resource: "@FutsalTournamentBundle/Resources/config/routing.yml"
     prefix:   /
 
-#futsal_user:
-#    resource: "@FutsalUserBundle/Resources/config/routing.yml"
-#    prefix:   /
+futsal_user:
+    resource: "@FutsalUserBundle/Resources/config/routing.yml"
+    prefix:   /
