--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,38 +1,71 @@
 security:
     encoders:
-        Futsal\UserBundle\Entity\User:
+        FOS\UserBundle\Model\UserInterface:
             algorithm: sha512
-            
-    providers:
-        main:
-            entity: { class: Futsal\UserBundle\Entity\User, property: username }
-    
-    #providers:
-    #    in_memory:
-    #        memory: ~
-    
-    #access_control:
-    #    - { path: ^/admin, roles: ROLE_ADMIN }
+
+
+    providers:   
+        fos_userbundle:
+            id: fos_user.user_provider.username
 
 
     firewalls:
-        secured_area:
-            pattern:    ^/
-            anonymous: ~
-            form_login:
-                login_path:  /login
-                check_path:  /login_check
-            logout:
-                path:   /logout
-                
-    #firewalls:
-    #    dev:
-    #        pattern: ^/(_(profiler|wdt|error)|css|images|js)/
-    #        security: false
+        # Disabling the security for the web debug toolbar, the profiler and Assetic.
+        dev:
+            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+            security: false
 
-    #    default:
-    #        anonymous: ~
-    
+        # -> custom firewall for the admin area of the URL
+        admin:
+            pattern:            /admin(.*)
+            context:            user
+            form_login:
+                provider:       fos_userbundle
+                login_path:     /admin/login
+                use_forward:    false
+                check_path:     /admin/login_check
+                failure_path:   null
+            logout:
+                path:           /admin/logout
+            anonymous:          true
+
+        # -> end custom configuration
+
+        # default login area for standard users
+
+        # This firewall is used to handle the public login area
+        # This part is handled by the FOS User Bundle
+        main:
+            pattern:             .*
+            context:             user
+            form_login:
+                provider:       fos_userbundle
+                login_path:     /login
+                use_forward:    false
+                check_path:     /login_check
+                failure_path:   null
+            logout:             true
+            anonymous:          true
+            
+
     role_hierarchy:
             ROLE_ADMIN:       ROLE_USER
             ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+
+
+    access_control:
+        # URL of FOSUserBundle which need to be available to anonymous users
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+
+        # Admin login page needs to be access without credential
+        - { path: ^/admin/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/logout$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/login_check$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+
+        # Secured part of the site
+        # This config requires being logged for the whole site and having the admin role for the admin part.
+        # Change these rules to adapt them to your needs
+        - { path: ^/admin/, role: [ROLE_ADMIN, ROLE_SONATA_ADMIN] }
+        - { path: ^/.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
