--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -42,7 +42,7 @@ security:
                 provider:       fos_userbundle
                 login_path:     /login
                 use_forward:    false
-                check_path:     /login_check
+                check_path:     /login_main_check
                 failure_path:   null
             logout:             true
             anonymous:          true
